Revert "Fix camera permission screen text rendering issue on Safari"
This reverts commit a0565bd5e6dea883616a703b9b0621bae3d843e8.

--- a/src/components/CameraPermissions/Primer/style.scss
+++ b/src/components/CameraPermissions/Primer/style.scss
@@ -17,8 +17,14 @@
   height: auto;
   width: 100%;
   font-size: var(--font-size-small);
+  display: flex;
+  flex-direction: column;
+  flex: 2 1 32 * $unit-x-small;
   min-height: 32 * $unit-x-small;
   max-width: 105.01 * $unit-x-small;
+  width: 100%;
+  padding: 10 * $unit-small;
+  margin: auto;
   @media (--small-viewport) {
     max-width: 79 * $unit-x-small;
   }
@@ -26,6 +32,7 @@
 
 .reasons {
   font-size: var(--font-size-small);
+
   text-align: center;
   min-height: 42 * $unit-small;
 }
@@ -46,6 +53,7 @@
   @media (--small-viewport) {
     background-size: contain;
     flex-grow: 1; // prevents container height collapsing on iOS devices
+    height: 100%;
   }
 }
 
